# s-web

./: README.rst  pyproject.toml
scrapy_web/: scrapy.cfg
scrapy_web/scrapy_web/: items.py  pipelines.py  settings.py
scrapy_web/scrapy_web/spiders/: dmoz_spider.py  myspider.py
tests/: test_scrapy_web.py
