[tool.poetry]
name = "scrapy-web"
version = "0.1.0"
description = ""
authors = ["Ivan Yastrebov <easy-quest@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
bpython = "^0.21"
requests = {extras = ["socks"], version = "^2.26.0"}
bs4 = "^0.0.1"
newspaper3k = "^0.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
